--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,7 +26,7 @@ jobs:
         run: pip cache purge
 
       - name: Install Dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r ${{ github.workspace }}/requirements.txt
 
       - name: Train Model
         run: python train.py # Train the model
