--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,6 +42,22 @@ jobs:
       - name: Train Model
         run: python ${{ github.workspace }}/train.py # Train the model
 
+      - name: Debug Info
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Contents of current directory:"
+          ls -la
+          echo "Contents of /home/runner/work/aiops-mlops/aiops-mlops/:"
+          ls -la /home/runner/work/aiops-mlops/aiops-mlops/
+          echo "Python version:"
+          python --version
+          echo "Pip list:"
+          pip list
+
+      - name: Run train.py with verbose output
+        run: python -v ${{ github.workspace }}/train.py
+
+
       - name: Save Model Artifact
         uses: actions/upload-artifact@v4
         with:
