--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,9 +30,10 @@ jobs:
           echo "numpy==1.21.0" > requirements.txt
           echo "pandas==1.3.0" >> requirements.txt
           echo "scikit-learn==1.0.2" >> requirements.txt
-          echo "flask==2.0.2" >> requirements.txt
+          echo "flask==2.2.2" >> requirements.txt
           echo "joblib==1.1.0" >> requirements.txt
           echo "mlflow==1.24.0" >> requirements.txt
+          echo "werkzeug==2.2.2" >> requirements.txt
           echo "prometheus-client==0.14.1" >> requirements.txt
           # Add other dependencies as needed
 
