--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -89,5 +89,5 @@ jobs:
       - name: Push to DockerHub
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker tag ml-model your-dockerhub-username/ml-model
-          docker push your-dockerhub-username/ml-model
+          docker tag ml-model t39229/ml-model
+          docker push t39229/ml-model
