Save Model Artifacts and Requirements2

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -98,6 +98,14 @@ jobs:
       - name: Build Docker Image
         run: docker build -t ml-model .
 
+      - name: Debug Secrets (REMOVE AFTER TESTING)
+        run: |
+          echo "Username length: ${#DOCKER_USERNAME}"
+          echo "Password length: ${#DOCKER_PASSWORD}"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Push to DockerHub
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
